<resources>
    <string name="app_name">MusicStructure</string>
    <string name="song_info">Name of Song - Name of Artist</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="artists">Artist</string>
    <string name="back_to_library">Library</string>
    <string name="library_description">This Activity is the home screen when you start this APP.</string>
    <string name="artists_description">This Activity shows up all artists on user device, and sort alphabetically.</string>
    <string name="albums_description">This Activity shows up all albums on user device, and sort alphabetically.</string>
    <string name="songs_description">This Activity shows up all songs on user device, and sort alphabetically.</string>
    <string name="search_description">This Activity shows up user search result.</string>
    <string name="payment_description">This Activity shows up payment information.
        User can choose a payment method, use credit card or use Paypal API.</string>
    <string name="search_query_hint">Search Music</string>
    <string name="search_result_description">When user click album information, will intent to payment activity.</string>
    <string name="album_name">KID A</string>
    <string name="artist_name">Radiohead</string>
</resources>
