<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apple.musicstructure.LibraryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/artists"
                style="@style/MyTextView"
                android:text="@string/artists" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/albums"
                style="@style/MyTextView"
                android:text="@string/albums" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/songs"
                style="@style/MyTextView"
                android:text="@string/songs" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/search"
                style="@style/MyTextView"
                android:text="@string/search" />

            <View style="@style/Divider" />

            <TextView
                style="@style/Description"
                android:text="@string/library_description" />
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/music_player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"></include>

</RelativeLayout>
