<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apple.musicstructure.SearchActivity">

    <TextView
        android:id="@+id/back_to_library"
        style="@style/BackToLib"
        android:text="@string/back_to_library" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_to_library"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_query_hint" />

    <TextView
        android:id="@+id/description_text_view"
        style="@style/Description"
        android:layout_below="@id/search_view"
        android:text="@string/search_description" />

    <View
        style="@style/Divider"
        android:layout_below="@id/description_text_view" />

    <RelativeLayout
        android:id="@+id/album_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text_view"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="@dimen/album_cover_image_view_size"
            android:layout_height="@dimen/album_cover_image_view_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/kida" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/album_image"
            android:text="@string/album_name"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/album_image"
            android:text="@string/artist_name" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_below="@id/album_info"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/Description"
        android:layout_below="@id/divider"
        android:text="@string/search_result_description"/>

    <include
        layout="@layout/music_player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
